upgrade to spring-boot 3.0.0, springdoc-openapi 2.0.0 and some code refactor