@@ -7,6 +7,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 public class MovieNotFoundException extends RuntimeException {
 
     public MovieNotFoundException(String imdbId) {
-        super(String.format("Movie with imdbId '%s' not found", imdbId));
+        super("Movie with imdbId '%s' not found".formatted(imdbId));
     }
 }
